--- a/app/assets/styles/globals.scss
+++ b/app/assets/styles/globals.scss
@@ -4,9 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap');
 
+@import './react-select.scss';
 @import 'react-redux-toastr/src/styles/index';
-
-// @import './react-select.scss';
 
 html,
 body {
@@ -48,17 +47,14 @@ input:focus {
 	opacity: 0;
 	transform: scale(0.9);
 }
-
 .slide-animation-enter-active {
 	opacity: 1;
 	transform: translateX(0);
 	transition: opacity 300ms, transform 300ms;
 }
-
 .slide-animation-exit {
 	opacity: 1;
 }
-
 .slide-animation-exit-active {
 	opacity: 0;
 	transform: scale(0.9);
